sandbox/output
TicketDispenser.java:23: error: cannot find symbol
        int newTurnNumber = this.turnNumberSequence.getVipNextTurnNumber();
                                                   ^
  symbol:   method getVipNextTurnNumber()
  location: variable turnNumberSequence of type TurnNumberSequence
1 error
